[package]
name = "rust-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.3", features = ["web", "desktop"] }
console_error_panic_hook = "0.1.7"
tracing = "0.1"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.79"
