[package]
name = "dioxus_ulanqab"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[[bin]]
name = "dioxus-ulanqab"
test = false
bench = false
path = "src/main.rs"

[[example]]
name = "ex-ulanqab"
path = "examples/ex-ulanqab/main.rs"

[dependencies]
dioxus = { version = "0.2.3", features = ["web", "desktop"] }
